refactor: Java 25 modernization for engine, integration, stateless (in-progress agent batch)
Engine core:
- YDefClientsLoader: strip() modernization
- YEngine: duplicate logger cleanup, var locals
- YNetRunner: strip() and pattern matching improvements
- YWorkItemStatus: diamond inference on HashMap

Integration module:
- YawlA2AServer, YawlEngineAdapter: var locals, switch expressions
- autonomous/: AgentCapability, AgentRegistry, ZaiService, config, generators, launchers,
  observability, reasoners, registry, resilience: comprehensive var/switch/collection modernization
- mcp/spec/: YawlCompletionSpecifications, YawlToolSpecifications: text blocks, var locals
- mcp/spring/: YawlMcpResourceRegistry, YawlMcpToolRegistry: toList(), stream cleanup
- observability/: OpenTelemetryConfig: var locals, collection factories
- orderfulfillment/: AgentCapability, CapacityChecker, DecisionWorkflow, EligibilityWorkflow,
  McpTaskContextSupplierImpl, OrderfulfillmentLauncher, PermutationRunner: full modernization
- spiffe/: SpiffeFederationConfig: var locals, diamond inference
- zai/: ZaiFunctionService, ZaiService: var locals, switch expressions

Stateless engine:
- elements/: YNet, YNetLocalVarVerifier, YSpecification: pattern matching, switch, var
- elements/marking/: YIdentifier, YIdentifierBag, YMarking, YSetOfMarkings: diamond inference, var
- monitor/: YCaseImportExportService, YCaseMonitoringService: collection factories, stream toList
- schema/: YDataValidator: List.of() for single-element validation
- unmarshal/: YDecompositionParser, YMarshal: diamond inference, var locals

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF